<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background_login"
    android:padding="5px"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.Login.LoginActivity">

    <RelativeLayout
        android:layout_width="@dimen/relative_width_login"
        android:layout_height="@dimen/relative_height_login"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/relative_margin_start_login"
        android:layout_marginTop="@dimen/relative_margin_top_login">
        <!-- Email Label -->


        <EditText
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_account_circle_white_24dp"
            android:singleLine="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/edit_text_account_margin_left_login"
            android:textSize="@dimen/edit_text_account_text_size_login"
            android:hint="@string/text_input_account_login"
            android:textColor="@color/color_text_login"
            android:id="@+id/edtAccount_login"
            android:layout_marginTop="@dimen/edit_text_account_margin_top_login"
            android:padding="@dimen/edit_text_account_padding_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/ic_vpn_key_black_24dp"
            android:singleLine="true"
            android:gravity="center"
            android:layout_marginLeft="@dimen/edit_text_password_margin_left_login"
            android:textSize="@dimen/edit_text_password_text_size_login"
            android:hint="@string/text_input_password_login"
            android:textColor="@color/color_text_login"
            android:id="@+id/edtPassword_login"
            android:layout_marginTop="@dimen/edit_text_password_margin_top_login"
            android:padding="@dimen/edit_text_password_padding_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

        <com.hanks.library.AnimateCheckBox
            android:id="@+id/chkSaveInfo_login"
            android:layout_width="@dimen/check_box_width_login"
            android:layout_height="@dimen/check_box_height_login"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/check_box_margin_bottom_login"
            android:padding="@dimen/check_box_padding_login"
            app:animDuration="200"
            app:checkedColor="@color/white"
            app:lineColor="@color/background_login"
            app:lineWidth="1.2dp"
            app:unCheckColor="@color/uncheck_checkbox_login" />

        <TextView
            android:textColor="@color/color_text_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/text_view_save_margin_bottom_login"
            android:layout_marginStart="@dimen/text_view_save_margin_start_login"
            android:text="@string/text_check_save_info_login" />



        <com.spark.submitbutton.SubmitButton
            android:id="@+id/btnSubmit_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignBottom="@+id/txtRegister_login"
            android:layout_centerHorizontal="true"
            android:text="@string/text_button_login"
            android:textStyle="bold"
            android:textColor="@color/background_login"
            app:sub_btn_background="@color/white"
            app:sub_btn_duration="900"
            app:sub_btn_line_color="@color/line_color_button_login"
            app:sub_btn_ripple_color="@color/ripple_color_button_login"
            app:sub_btn_tick_color="@color/white" />

        <TextView
            android:id="@+id/txtRegister_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/text_view_register_margin_bottom_login"
            android:gravity="center"
            android:text="@string/text_register_login"
            android:textColor="@color/color_text_login"
            android:textSize="@dimen/text_view_register_text_size_login" />
    </RelativeLayout>

</RelativeLayout>